# datadog-builder

./: .gitignore  .testr.conf  AUTHORS  CONTRIBUTING.rst  ChangeLog  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
datadog_builder/: __init__.py  client.py  common.py  constants.py  init.py  schema.py  shell.py  update.py  validate.py  version.py
datadog_builder/tests/: base.py  test_datadog_builder.py
datadog_builder/tests/functional/: base.py  serializer.py  test_client.py
datadog_builder/tests/functional/cassettes/: datadog_builder.tests.functional.test_client.ClientTestCase.test_simple_init.yml
datadog_builder/tests/unit/: base.py  test_client.py  test_config.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_datadog_builder.py
