[metadata]
name = datadog-builder
summary = Build and manage datadog monitors
description-file =
    README.rst
author = Jamie Lennox
author-email = jamielennox@gmail.com
home-page = https://github.com/BonnyCI/datadog-builder
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    datadog_builder

[entry_points]
console_scripts =
    datadog-builder = datadog_builder.shell:main

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[compile_catalog]
directory = datadog_builder/locale
domain = datadog_builder

[update_catalog]
domain = datadog_builder
output_dir = datadog_builder/locale
input_file = datadog_builder/locale/datadog_builder.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = datadog_builder/locale/datadog_builder.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
